Add KeyStoreSyncService for certificate synchronization and optimize PKI service usage